--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -29,10 +29,8 @@ scrape_configs:
 
   - job_name: "coordinator-exporter"
     static_configs:
-    - targets:
-      - {{ dingo_coordinator_http_monitor_list }}
+      - targets: {{ dingo_coordinator_http_monitor_list }}
 
   - job_name: "executor-exporter"
     static_configs:
-    - targets:
-      - {{ dingo_executor_http_monitor_list }}
+      - targets: {{ dingo_executor_http_monitor_list }}
