[dingo] update log configuration about sqlline and driver

--- a/roles/dingo/templates/coordinator.yaml.j2
+++ b/roles/dingo/templates/coordinator.yaml.j2
@@ -9,4 +9,6 @@ server:
         initRaftSvrList: {{ dingo_coordinator_exchange_connection_list }}
     schedule:
         autoSplit: true
+        defaultAutoMaxSize: 1073741824
+        defaultAutoMaxCount: 1000000
     monitorPort: {{ dingo_coordinator_http_monitor_port }}
