[dingo] update template about dingo coordinator and executor

--- a/roles/dingo/templates/coordinator.yaml.j2
+++ b/roles/dingo/templates/coordinator.yaml.j2
@@ -6,7 +6,8 @@ exchange:
 server:
     dataPath: {{ dingo_coordinator_meta_path }}
     raft:
-        initRaftSvrList: {{ dingo_coordinator_exchange_connection_list }}
+        port: {{ dingo_coordinator_raft_port }}
+        initRaftSvrList: {{ dingo_coordinator_raft_connection_list }}
     schedule:
         autoSplit: true
         defaultAutoMaxSize: 1073741824
