--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -9,6 +9,8 @@ server:
     monitorPort: {{ dingo_executor_http_monitor_port }}
 store:
     dbPath: {{ dingo_executor_raft_db_path }}
+    dbRocksOptionsFile: {{ dingo_home }}/conf/db_rocks.ini
+    logRocksOptionsFile: {{ dingo_home }}/conf/log_rocks.ini
     raft:
        port: {{ dingo_executor_raft_port }}
        raftPath: {{ dingo_executor_raft_log_path }}
