--- a/roles/prometheus/templates/prometheus.yml.j2
+++ b/roles/prometheus/templates/prometheus.yml.j2
@@ -21,6 +21,11 @@ scrape_configs:
     file_sd_configs:
     - files:
       - "{{ prometheus_home }}/file_sd/node*.yml"
+      
+  - job_name: "process"
+    file_sd_configs:
+    - files:
+      - "{{ prometheus_home }}/file_sd/process*.yml"
 
   - job_name: "jmx"
     file_sd_configs:
