--- a/roles/dingo/templates/logback-coordinator.xml.j2
+++ b/roles/dingo/templates/logback-coordinator.xml.j2
@@ -42,7 +42,7 @@
         </encoder>
     </appender>
 
-    <root level="info">
+    <root level="error">
         <appender-ref ref="ALL_LOG_FILE"/>
     </root>
 </configuration>
