--- a/roles/dingo/templates/logback-import.xml.j2
+++ b/roles/dingo/templates/logback-import.xml.j2
@@ -17,12 +17,12 @@
 
 <configuration>
     <property name="LOG_HOME" value="{{ dingo_log_path }}"/>
-    <property name="LOG_FILE" value="dingo-web.log"/>
-    <property name="ERROR_LOG_FILE" value="dingo-web-error.log"/>
+    <property name="LOG_FILE" value="import-info.log"/>
+    <property name="ERROR_LOG_FILE" value="import-error.log"/>
 
     <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
         <encoder>
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
+            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %class{36} [%L] [%M] - %msg%xEx%n</pattern>
             <charset>UTF-8</charset>
         </encoder>
     </appender>
@@ -32,37 +32,16 @@
             <fileNamePattern>${LOG_HOME}/${LOG_FILE}.%d{yyyy-MM-dd}.%i</fileNamePattern>
             <maxHistory>7</maxHistory>
             <timeBasedFileNamingAndTriggeringPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedFNATP">
-                <maxFileSize>20MB</maxFileSize>
+                <maxFileSize>150MB</maxFileSize>
             </timeBasedFileNamingAndTriggeringPolicy>
         </rollingPolicy>
         <encoder>
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
+            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %-5level %class{36} [%L] [%M] - %msg%xEx%n</pattern>
             <charset>UTF-8</charset>
         </encoder>
-    </appender>
-
-    <appender name="ERROR_LOG_FILE" class="ch.qos.logback.core.rolling.RollingFileAppender">
-        <file>${LOG_HOME}/${ERROR_LOG_FILE}</file>
-        <rollingPolicy class="ch.qos.logback.core.rolling.TimeBasedRollingPolicy">
-            <fileNamePattern>${LOG_HOME}/${ERROR_LOG_FILE}.%d{yyyy-MM-dd}.%i</fileNamePattern>
-            <maxHistory>7</maxHistory>
-            <timeBasedFileNamingAndTriggeringPolicy class="ch.qos.logback.core.rolling.SizeAndTimeBasedFNATP">
-                <maxFileSize>20MB</maxFileSize>
-            </timeBasedFileNamingAndTriggeringPolicy>
-        </rollingPolicy>
-        <encoder>
-            <pattern>%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n</pattern>
-            <charset>UTF-8</charset>
-        </encoder>
-        <filter class="ch.qos.logback.classic.filter.LevelFilter">
-            <level>ERROR</level>
-            <onMatch>ACCEPT</onMatch>
-            <onMismatch>DENY</onMismatch>
-        </filter>
     </appender>
 
     <root level="error">
         <appender-ref ref="ALL_LOG_FILE"/>
-        <appender-ref ref="ERROR_LOG_FILE"/>
     </root>
 </configuration>
