Add config root_log_level.

--- a/roles/dingo/templates/logback-coordinator.xml.j2
+++ b/roles/dingo/templates/logback-coordinator.xml.j2
@@ -42,7 +42,7 @@
         </encoder>
     </appender>
 
-    <root level="error">
+    <root level="{{ root_log_level }}">
         <appender-ref ref="ALL_LOG_FILE"/>
     </root>
 </configuration>
