--- a/roles/dingo/templates/logback-executor.xml.j2
+++ b/roles/dingo/templates/logback-executor.xml.j2
@@ -41,7 +41,7 @@
         </encoder>
     </appender>
 
-    <root level="error">
+    <root level="{{ root_log_level }}">
         <appender-ref ref="ALL_LOG_FILE"/>
     </root>
 </configuration>
