--- a/roles/dingo_store/templates/start-coordinator.sh.j2
+++ b/roles/dingo_store/templates/start-coordinator.sh.j2
@@ -144,7 +144,7 @@ clean()
 
 stop() 
 {
-   k_pid=$(ps -ef | grep "dingodb_server --role coordinator" |grep -v grep|awk '{printf $2 "\n"}')
+   k_pid=$(ps -fu {{ dingo_user }} | grep "dingodb_server --role coordinator" |grep -v grep|awk '{printf $2 "\n"}')
    for i in $k_pid
    do
    echo $i 
