[chore][deploy] dingodb_server start use full path

--- a/roles/dingo_store/templates/start-coordinator.sh.j2
+++ b/roles/dingo_store/templates/start-coordinator.sh.j2
@@ -114,7 +114,7 @@ function start_program() {
 
   cd ${root_dir}
 
-  nohup ./bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml 2>&1 >./log/out &
+  nohup ${root_dir}/bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml 2>&1 >./log/out &
   #./bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml
 }
 
