--- a/roles/dingo_store/templates/start-store.sh.j2
+++ b/roles/dingo_store/templates/start-store.sh.j2
@@ -19,8 +19,8 @@ eval set -- "${FLAGS_ARGV}"
 BASE_DIR=$(dirname $(cd $(dirname $0); pwd))
 DIST_DIR=$BASE_DIR/dist
 
-SERVER_HOST={{ inventory_hostname | default(127.0.0.1) }}
-RAFT_HOST={{ inventory_hostname | default(127.0.0.1) }}
+SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
+RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
 COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
 STORE_NUM={{ hostvars[inventory_hostname]['store_num'] | default(1) }}
 RAFT_START_PORT={{ RAFT_START_PORT | default(20101) }}
