--- a/roles/dingo_store/templates/start-coordinator.sh.j2
+++ b/roles/dingo_store/templates/start-coordinator.sh.j2
@@ -59,14 +59,14 @@ function deploy_store() {
   if [ ! -d "$dstpath/data" ]; then
     mkdir "$dstpath/data"
   fi
-  if [ ! -d "$dstpath/data/store" ]; then
-    mkdir "$dstpath/data/store"
+  if [ ! -d "$dstpath/data/${role}" ]; then
+    mkdir "$dstpath/data/${role}"
   fi
-  if [ ! -d "$dstpath/data/store/raft" ]; then
-    mkdir "$dstpath/data/store/raft"
+  if [ ! -d "$dstpath/data/${role}/raft" ]; then
+    mkdir "$dstpath/data/${role}/raft"
   fi
-  if [ ! -d "$dstpath/data/store/db" ]; then
-    mkdir "$dstpath/data/store/db"
+  if [ ! -d "$dstpath/data/${role}/db" ]; then
+    mkdir "$dstpath/data/${role}/db"
   fi
 
   cp $srcpath/build/bin/dingodb_server $dstpath/bin/
@@ -130,13 +130,13 @@ start() {
 }
 
 
-
-
 clean() 
 {
-  rm -rf ../dist/coordinator*
+  i=1
+  program_dir=$BASE_DIR/dist/${FLAGS_role}${i}
+  rm -rf ${program_dir}
   sleep 1
-  echo "rm -rf all cluster files"
+  echo "rm -rf ${program_dir} files"
 }
 
 
@@ -167,7 +167,7 @@ if [ "$1" = "deploy" ];then
         deploy
 elif [ "$1" = "clean" ];then
         stop
-	clean
+	      clean
 elif [ "$1" = "start" ];then
         start
 
