--- a/roles/dingo_store/templates/start-store.sh.j2
+++ b/roles/dingo_store/templates/start-store.sh.j2
@@ -22,9 +22,11 @@ DIST_DIR=$BASE_DIR/dist
 SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
 RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
 COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
-STORE_NUM={{ hostvars[inventory_hostname]['store_num'] | default(1) }}
+STORE_NUM={{ store_num | int }}
 RAFT_START_PORT={{ RAFT_START_PORT | default(20101) }}
 SERVER_START_PORT={{ SERVER_START_PORT | default(20001) }}
+DISK_LIST_STR="{{ hostvars[inventory_hostname]['disk']  | default('${DIST_DIR}') }}"
+eval DISK_LIST=($DISK_LIST_STR)
 
 
 if [ ! -d "$DIST_DIR" ]; then
@@ -60,14 +62,14 @@ function deploy_store() {
   if [ ! -d "$dstpath/data" ]; then
     mkdir "$dstpath/data"
   fi
-  if [ ! -d "$dstpath/data/store" ]; then
-    mkdir "$dstpath/data/store"
+  if [ ! -d "$dstpath/data/${role}" ]; then
+    mkdir "$dstpath/data/${role}"
   fi
-  if [ ! -d "$dstpath/data/store/raft" ]; then
-    mkdir "$dstpath/data/store/raft"
+  if [ ! -d "$dstpath/data/${role}/raft" ]; then
+    mkdir "$dstpath/data/${role}/raft"
   fi
-  if [ ! -d "$dstpath/data/store/db" ]; then
-    mkdir "$dstpath/data/store/db"
+  if [ ! -d "$dstpath/data/${role}/db" ]; then
+    mkdir "$dstpath/data/${role}/db"
   fi
 
   cp $srcpath/build/bin/dingodb_server $dstpath/bin/
@@ -103,7 +105,12 @@ deploy() {
     INSTANCE_START_ID=`expr 1000 + $i + $START_ID`
     N_SERVER_START_PORT=`expr $SERVER_START_PORT + $i - 1`
     N_RAFT_START_PORT=`expr $RAFT_START_PORT + $i - 1`
-    program_dir=$BASE_DIR/dist/${FLAGS_role}${i}
+    # program_dir=$BASE_DIR/dist/${FLAGS_role}${i}
+    program_dir=${DISK_LIST[i - 1]}/${FLAGS_role}${i}
+    if [ ! -d "${DISK_LIST[i - 1]}" ]; then
+      mkdir -p "${DISK_LIST[i - 1]}"
+    fi
+
     deploy_store ${FLAGS_role} $BASE_DIR $program_dir  $N_SERVER_START_PORT $N_RAFT_START_PORT $INSTANCE_START_ID ${COOR_SRV_PEERS} ${COOR_RAFT_PEERS:-fail}
   done
 }
@@ -126,7 +133,8 @@ start() {
   #FLAGS_role=${FLAGS_role}
   for i in $(seq 1 $STORE_NUM)
   do
-    program_dir=$BASE_DIR/dist/${FLAGS_role}${i}
+    # program_dir=$BASE_DIR/dist/${FLAGS_role}${i}
+    program_dir=${DISK_LIST[i - 1]}/${FLAGS_role}${i}
     # clean log
     rm -f ${program_dir}/log/*
     start_program ${FLAGS_role} ${program_dir}
@@ -138,9 +146,13 @@ start() {
 
 clean() 
 {
-  rm -rf ../dist/store*
-  sleep 1
-  echo "rm -rf all cluster files"
+  for i in $(seq 1 $STORE_NUM)
+  do
+    program_dir=${DISK_LIST[i - 1]}/${FLAGS_role}${i}
+    rm -rf ${program_dir}
+    sleep 1
+    echo "rm -rf ${program_dir}  files"
+  done
 }
 
 
@@ -171,7 +183,7 @@ if [ "$1" = "deploy" ];then
 	
 elif [ "$1" = "clean" ];then
         stop
-	clean
+	      clean
 
 elif [ "$1" = "start" ];then
         start
