--- a/roles/dingo_store/templates/start-coordinator.sh.j2
+++ b/roles/dingo_store/templates/start-coordinator.sh.j2
@@ -24,98 +24,25 @@ DIST_DIR=$BASE_DIR/dist
 if [ ! -d "$DIST_DIR" ]; then
   mkdir "$DIST_DIR"
 fi
+
 SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
 RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
 COORDINATOR_RAFT_START_PORT={{ dingo_store_coordinator_raft_port }}
 COORDINATOR_SERVER_START_PORT={{ dingo_store_coordinator_exchange_port }}
 COOR_RAFT_PEERS={{ dingo_coordinator_raft_connection_list }}
+COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
 INSTANCE_START_ID={{ 1000 | int +  groups['coordinator'].index(inventory_hostname) | int }}
+TMP_COORDINATOR_SERVICES=$BASE_DIR/build/bin/coor_list
 
-function deploy_store() {
-  role=$1
-  srcpath=$2
-  dstpath=$3
-  server_port=$4
-  raft_port=$5
-  instance_id=$6
-  coor_srv_peers=$7
-  coor_raft_peers=$8
-
-  echo "server ${dstpath}"
-
-  if [ ! -d "$dstpath" ]; then
-    mkdir "$dstpath"
-  fi
-
-  if [ ! -d "$dstpath/bin" ]; then
-    mkdir "$dstpath/bin"
-  fi
-  if [ ! -d "$dstpath/conf" ]; then
-    mkdir "$dstpath/conf"
-  fi
-  if [ ! -d "$dstpath/log" ]; then
-    mkdir "$dstpath/log"
-  fi
-  if [ ! -d "$dstpath/data" ]; then
-    mkdir "$dstpath/data"
-  fi
-  if [ ! -d "$dstpath/data/${role}" ]; then
-    mkdir "$dstpath/data/${role}"
-  fi
-  if [ ! -d "$dstpath/data/${role}/raft" ]; then
-    mkdir "$dstpath/data/${role}/raft"
-  fi
-  if [ ! -d "$dstpath/data/${role}/db" ]; then
-    mkdir "$dstpath/data/${role}/db"
-  fi
-
-  cp $srcpath/build/bin/dingodb_server $dstpath/bin/
-  if [ "${FLAGS_replace_conf}" == "0" ]; then
-    cp $srcpath/conf/${role}.template.yaml $dstpath/conf/${role}.yaml
-
-    sed  -i 's,\$INSTANCE_ID\$,'"$instance_id"',g'          $dstpath/conf/${role}.yaml
-    sed  -i 's,\$SERVER_HOST\$,'"$SERVER_HOST"',g'          $dstpath/conf/${role}.yaml
-    sed  -i 's,\$SERVER_PORT\$,'"$server_port"',g'          $dstpath/conf/${role}.yaml
-    sed  -i 's,\$RAFT_HOST\$,'"$RAFT_HOST"',g'              $dstpath/conf/${role}.yaml
-    sed  -i 's,\$RAFT_PORT\$,'"$raft_port"',g'              $dstpath/conf/${role}.yaml
-    sed  -i 's,\$BASE_PATH\$,'"$dstpath"',g'                $dstpath/conf/${role}.yaml
-
-    sed  -i 's|\$COORDINATOR_SERVICE_PEERS\$|'"$coor_srv_peers"'|g'    $dstpath/conf/${role}.yaml
-    sed  -i 's|\$COORDINATOR_RAFT_PEERS\$|'"$coor_raft_peers"'|g'  $dstpath/conf/${role}.yaml
-  fi
-
-  if [ "${FLAGS_clean_db}" == "0" ]; then
-    rm -rf $dstpath/data/store/db/*
-  fi
-  if [ "${FLAGS_clean_raft}" == "0" ]; then
-    rm -rf $dstpath/data/store/raft/*
-  fi
-  if [ "${FLAGS_clean_log}" == "0" ]; then
-    rm -rf $dstpath/log/*
-  fi
-}
+source $mydir/deploy_func.sh
 
 deploy() {
-  COORDINATOR_SERVER_START_PORT={{ COORDINATOR_SERVER_START_PORT | default(22001) }}
-  COORDINATOR_RAFT_START_PORT={{ COORDINATOR_RAFT_START_PORT | default(22101) }}
-  #RAFT_START_PORT=$(RAFT_START_PORT:-20101) 
-  #SERVER_START_PORT=$(SERVER_START_PORT:-20001)
+  echo "# dingo-store coordinators" > ${TMP_COORDINATOR_SERVICES}
+  echo $COOR_SRV_PEERS | tr ',' '\n' >> ${TMP_COORDINATOR_SERVICES}
   
   program_dir=$BASE_DIR/dist/${FLAGS_role}1
-  deploy_store ${FLAGS_role} $BASE_DIR $program_dir $COORDINATOR_SERVER_START_PORT $COORDINATOR_RAFT_START_PORT $INSTANCE_START_ID ${COOR_SRV_PEERS:-fail} ${COOR_RAFT_PEERS}
+  deploy_store ${FLAGS_role} $BASE_DIR $program_dir $COORDINATOR_SERVER_START_PORT $COORDINATOR_RAFT_START_PORT $INSTANCE_START_ID ${COOR_RAFT_PEERS} ${TMP_COORDINATOR_SERVICES}
 
-}
-
-
-function start_program() {
-  role=$1
-  root_dir=$2
-  echo "start server: ${root_dir}"
-
-  cd ${root_dir}
-
-  nohup ${root_dir}/bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml 2>&1 >./log/out &
-  #./bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml
 }
 
 
