--- a/roles/dingo_store/templates/start-store.sh.j2
+++ b/roles/dingo_store/templates/start-store.sh.j2
@@ -23,82 +23,23 @@ SERVER_HOST={{ inventory_hostname | default('127.0.0.1') }}
 RAFT_HOST={{ inventory_hostname | default('127.0.0.1') }}
 COOR_SRV_PEERS={{ dingo_store_store_exchange_connection_list }}
 STORE_NUM={{ store_num | int }}
-RAFT_START_PORT={{ RAFT_START_PORT | default(20101) }}
-SERVER_START_PORT={{ SERVER_START_PORT | default(20001) }}
+RAFT_START_PORT={{ dingo_store_raft_port | default(20101) }}
+SERVER_START_PORT={{ dingo_store_exchange_port | default(20001) }}
 DISK_LIST_STR="{{ hostvars[inventory_hostname]['disk']  | default('${DIST_DIR}') }}"
 eval DISK_LIST=($DISK_LIST_STR)
+TMP_COORDINATOR_SERVICES=$BASE_DIR/build/bin/coor_list
 
 
 if [ ! -d "$DIST_DIR" ]; then
   mkdir "$DIST_DIR"
 fi
 
-
-function deploy_store() {
-  role=$1
-  srcpath=$2
-  dstpath=$3
-  server_port=$4
-  raft_port=$5
-  instance_id=$6
-  coor_srv_peers=$7
-  coor_raft_peers=$8
-
-  echo "server ${dstpath}"
-
-  if [ ! -d "$dstpath" ]; then
-    mkdir "$dstpath"
-  fi
-
-  if [ ! -d "$dstpath/bin" ]; then
-    mkdir "$dstpath/bin"
-  fi
-  if [ ! -d "$dstpath/conf" ]; then
-    mkdir "$dstpath/conf"
-  fi
-  if [ ! -d "$dstpath/log" ]; then
-    mkdir "$dstpath/log"
-  fi
-  if [ ! -d "$dstpath/data" ]; then
-    mkdir "$dstpath/data"
-  fi
-  if [ ! -d "$dstpath/data/${role}" ]; then
-    mkdir "$dstpath/data/${role}"
-  fi
-  if [ ! -d "$dstpath/data/${role}/raft" ]; then
-    mkdir "$dstpath/data/${role}/raft"
-  fi
-  if [ ! -d "$dstpath/data/${role}/db" ]; then
-    mkdir "$dstpath/data/${role}/db"
-  fi
-
-  cp $srcpath/build/bin/dingodb_server $dstpath/bin/
-  if [ "${FLAGS_replace_conf}" == "0" ]; then
-    cp $srcpath/conf/${role}.template.yaml $dstpath/conf/${role}.yaml
-
-    sed  -i 's,\$INSTANCE_ID\$,'"$instance_id"',g'          $dstpath/conf/${role}.yaml
-    sed  -i 's,\$SERVER_HOST\$,'"$SERVER_HOST"',g'          $dstpath/conf/${role}.yaml
-    sed  -i 's,\$SERVER_PORT\$,'"$server_port"',g'          $dstpath/conf/${role}.yaml
-    sed  -i 's,\$RAFT_HOST\$,'"$RAFT_HOST"',g'              $dstpath/conf/${role}.yaml
-    sed  -i 's,\$RAFT_PORT\$,'"$raft_port"',g'              $dstpath/conf/${role}.yaml
-    sed  -i 's,\$BASE_PATH\$,'"$dstpath"',g'                $dstpath/conf/${role}.yaml
-
-    sed  -i 's|\$COORDINATOR_SERVICE_PEERS\$|'"$coor_srv_peers"'|g'    $dstpath/conf/${role}.yaml
-    sed  -i 's|\$COORDINATOR_RAFT_PEERS\$|'"$coor_raft_peers"'|g'  $dstpath/conf/${role}.yaml
-  fi
-
-  if [ "${FLAGS_clean_db}" == "0" ]; then
-    rm -rf $dstpath/data/store/db/*
-  fi
-  if [ "${FLAGS_clean_raft}" == "0" ]; then
-    rm -rf $dstpath/data/store/raft/*
-  fi
-  if [ "${FLAGS_clean_log}" == "0" ]; then
-    rm -rf $dstpath/log/*
-  fi
-}
+source $mydir/deploy_func.sh
 
 deploy() {
+  echo "# dingo-store coordinators" > ${TMP_COORDINATOR_SERVICES}
+  echo $COOR_SRV_PEERS | tr ',' '\n' >> ${TMP_COORDINATOR_SERVICES}
+
   for i in $(seq 1 $STORE_NUM)
   do
     START_ID={{ groups['coordinator'].index(inventory_hostname) * 100 }}
@@ -111,22 +52,9 @@ deploy() {
       mkdir -p "${DISK_LIST[i - 1]}"
     fi
 
-    deploy_store ${FLAGS_role} $BASE_DIR $program_dir  $N_SERVER_START_PORT $N_RAFT_START_PORT $INSTANCE_START_ID ${COOR_SRV_PEERS} ${COOR_RAFT_PEERS:-fail}
+    deploy_store ${FLAGS_role} $BASE_DIR $program_dir  $N_SERVER_START_PORT $N_RAFT_START_PORT $INSTANCE_START_ID ${COOR_RAFT_PEERS:-fail} ${TMP_COORDINATOR_SERVICES}
   done
 }
-
-
-function start_program() {
-  role=$1
-  root_dir=$2
-  echo "start server: ${root_dir}"
-
-  cd ${root_dir}
-
-   nohup ${root_dir}/bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml 2>&1 >./log/out &
-   #./bin/dingodb_server --role ${role}  --conf ./conf/${role}.yaml
-}
-
 
 
 start() {
