--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -8,8 +8,15 @@ server:
     user: user
     keyring: TO_BE_CONTINUED
     resourceTag: 1
-    mysqlPort: 3307
+    mysqlPort: {{ dingo_mysql_port }}
 variable:
     autoIncrementCacheCount: 100
     autoIncrementIncrement: 1
     autoIncrementOffset: 1
+security:
+    cipher:
+        keyPath: {{ dingo_home }}/conf/dingodb.jks
+        keyPass: dingodb
+        storePass: dingodb
+        alias: dingodb
+        issuer: dingo
