--- a/roles/dingo_store/templates/mysql_init.sh.j2
+++ b/roles/dingo_store/templates/mysql_init.sh.j2
@@ -9,18 +9,18 @@ DINGODB_MYSQL_INIT=0
 while [ "${DINGODB_HAVE_STORE_AVAILABLE}" -eq 0 ]; do
     echo "DINGODB_HAVE_STORE_AVAILABLE = 0, wait 1 second"
     sleep 1
-    DINGODB_HAVE_STORE_AVAILABLE=$(./dingodb_client_coordinator --method=GetStoreMap 2>&1 >/dev/null |grep -c DINGODB_HAVE_STORE_AVAILABLE)
+    DINGODB_HAVE_STORE_AVAILABLE=$(./dingodb_client_coordinator --method=GetStoreMap 2>&1 |grep -c DINGODB_HAVE_STORE_AVAILABLE)
 done
 
 echo "DINGODB_HAVE_STORE_AVAILABLE = 1, start to initialize MySQL"
-cd - || exit 1
 
-DINGODB_MYSQL_INIT=$(./dingodb_client_coordinator --method=GetSchemaByName --name=mysql 2>&1 >/dev/null |grep -c table_ids)
+DINGODB_MYSQL_INIT=$(./dingodb_client_coordinator --method=GetSchemaByName --name=mysql 2>&1  |grep -c table_ids)
 
 if [ "${DINGODB_MYSQL_INIT}" -ne 0 ]; then
     echo "mysql table_ids exists exit"
     exit 1
 fi
+cd - || exit 1
 
 # run Java start mysql_init 
 {{ jdk_home }}/bin/java -cp $BASE_DIR/libs/dingo-mysql-init-all.jar io.dingodb.mysql.MysqlInit {{ inventory_hostname }}:{{ dingo_store_coordinator_exchange_port }} > mysql_init.log
