Fix java web Dlogging.config

--- a/roles/dingo/templates/start-web.sh.j2
+++ b/roles/dingo/templates/start-web.sh.j2
@@ -21,7 +21,7 @@ ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
 JAR_PATH=$(find $ROOT -name dingo-web*.jar)
 
 nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
-     -Dlogback.configurationFile=file:${ROOT}/conf/logback-web.xml \
+     -Dlogging.config=file:${ROOT}/conf/logback-web.xml \
      -jar ${JAR_PATH} \
      --spring.config.location=${ROOT}/conf/application.yaml \
      > {{ dingo_log_path }}/dingo-web.out &
