[chore][deploy] Fix executor yml

--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -20,3 +20,5 @@ security:
         storePass: dingodb
         alias: dingodb
         issuer: dingo
+store:
+    coordinators: {{ dingo_coordinator_exchange_connection_list }}
