--- a/roles/dingo/templates/logback-proxy.xml.j2
+++ b/roles/dingo/templates/logback-proxy.xml.j2
@@ -17,8 +17,8 @@
 
 <configuration>
     <property name="LOG_HOME" value="{{ dingo_log_path }}"/>
-    <property name="LOG_FILE" value="dingo-web.log"/>
-    <property name="ERROR_LOG_FILE" value="dingo-web-error.log"/>
+    <property name="LOG_FILE" value="dingo-proxy.log"/>
+    <property name="ERROR_LOG_FILE" value="dingo-proxy-error.log"/>
 
     <appender name="STDOUT" class="ch.qos.logback.core.ConsoleAppender">
         <encoder>
