--- a/roles/dingo/templates/stop-all-component.sh.j2
+++ b/roles/dingo/templates/stop-all-component.sh.j2
@@ -25,7 +25,7 @@ if [[ "" !=  "$PID" ]]; then
   kill -9 $PID
 fi
 
-PID=`ps -u {{ dingo_user }} -o pid,cmd | grep dingo-web | grep -v grep | awk '{print $1}'`
+PID=`ps -u {{ dingo_user }} -o pid,cmd | grep dingo-proxy | grep -v grep | awk '{print $1}'`
 if [[ "" !=  "$PID" ]]; then
   echo "killing $PID"
   kill -9 $PID
