--- a/roles/dingo_store/templates/mysql_init.sh.j2
+++ b/roles/dingo_store/templates/mysql_init.sh.j2
@@ -24,7 +24,7 @@ cd - || exit 1
 
 # run Java start mysql_init
 JAR_PATH=$(find ${BASE_DIR}/libs -name dingo-mysql-init-*.jar)
-{{ jdk_home }}/bin/java -cp ${JAR_PATH} io.dingodb.mysql.MysqlInit {{ inventory_hostname }}:{{ dingo_store_coordinator_exchange_port }} > mysql_init.log
+{{ jdk_home }}/bin/java -cp ${JAR_PATH} io.dingodb.mysql.MysqlInit {{ dingo_coordinator_exchange_tmp_list_string }} > mysql_init.log
 
 # check status
 if [ $? -eq 0 ]
