--- a/roles/dingo/templates/start-web.sh.j2
+++ b/roles/dingo/templates/start-web.sh.j2
@@ -16,15 +16,12 @@
 # limitations under the License.
 #
 
+set -x
 ROOT="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && pwd )"
-JAR_PATH=$(find $ROOT -name dingo-executor-*.jar)
-STORE_JAR_PATH=$(find $ROOT -name dingo-store*.jar)
-NET_JAR_PATH=$(find $ROOT -name dingo-net-*.jar)
-JAVA_OPTS="-Xms1g -Xmx1g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFullGC -XX:+DisableExplicitGC -XX:+HeapDumpOnOutOfMemoryError -javaagent:{{ dingo_home }}/dingo-store/libs/jmx_prometheus_javaagent-0.17.2.jar={{ jmx_prometheus_javaagent_port }}:{{ dingo_home }}/conf/jmx_config.yaml"
+JAR_PATH=$(find $ROOT -name dingo-web*.jar)
 
 nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
-     -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
-     -classpath ${JAR_PATH}:${NET_JAR_PATH}  \
-     io.dingodb.server.executor.Starter \
-     --config ${ROOT}/conf/executor.yaml \
-     > {{ dingo_log_path }}/executor.out &
+     -Dlogging.config=file:${ROOT}/conf/logback-web.xml \
+     -jar ${JAR_PATH} \
+     --spring.config.location=${ROOT}/conf/application-web.yaml \
+     > {{ dingo_log_path }}/dingo-web.out &
