--- a/roles/dingo/templates/start-executor.sh.j2
+++ b/roles/dingo/templates/start-executor.sh.j2
@@ -24,7 +24,7 @@ JAVA_OPTS="-Xms1g -Xmx1g -XX:+AlwaysPreTouch -XX:+UseG1GC -XX:+ScavengeBeforeFul
 
 nohup {{ jdk_home }}/bin/java ${JAVA_OPTS} \
      -Dlogback.configurationFile=file:${ROOT}/conf/logback-executor.xml \
-     -classpath ${JAR_PATH}:${NET_JAR_PATH}  \
+     -classpath ${JAR_PATH}:${NET_JAR_PATH}:${STORE_JAR_PATH}  \
      io.dingodb.server.executor.Starter \
      --config ${ROOT}/conf/executor.yaml \
      > {{ dingo_log_path }}/executor.out &
