--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -13,6 +13,10 @@ variable:
     autoIncrementCacheCount: 100
     autoIncrementIncrement: 1
     autoIncrementOffset: 1
+store:
+    bufferSize: 8388608
+    bufferNumber: 2
+    fileSize: 2097152
 security:
     cipher:
         keyPath: {{ dingo_home }}/conf/dingodb.jks
