--- a/roles/dingo/templates/executor.yaml.j2
+++ b/roles/dingo/templates/executor.yaml.j2
@@ -10,13 +10,13 @@ server:
     resourceTag: 1
     mysqlPort: {{ dingo_mysql_port }}
 variable:
-    autoIncrementCacheCount: 100
+    autoIncrementCacheCount: {{ dingo_auto_increment_cache_count }}
     autoIncrementIncrement: 1
     autoIncrementOffset: 1
 store:
-    bufferSize: 8388608
-    bufferNumber: 2
-    fileSize: 2097152
+    bufferSize: {{ dingo_executor_buffer_size }}
+    bufferNumber: {{ dingo_executor_buffer_number }}
+    fileSize: {{ dingo_executor_file_size }}
 security:
     cipher:
         keyPath: {{ dingo_home }}/conf/dingodb.jks
